; ModuleID = '/home/carl/AnghaBench/capstone/arch/M68K/extr_M68KDisassembler.c_update_reg_list_regbits.c'
source_filename = "/home/carl/AnghaBench/capstone/arch/M68K/extr_M68KDisassembler.c_update_reg_list_regbits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@M68K_REG_D0 = common dso_local global i32 0, align 4
@M68K_REG_A0 = common dso_local global i32 0, align 4
@M68K_REG_FP0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_3__*, i32)* @update_reg_list_regbits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_reg_list_regbits(i32* %0, %struct.TYPE_3__* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %7, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @M68K_REG_D0, align 4
  %13 = load i32, i32* %7, align 4
  %14 = and i32 %13, 255
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @update_bits_range(i32* %11, i32 %12, i32 %14, i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* @M68K_REG_A0, align 4
  %19 = load i32, i32* %7, align 4
  %20 = ashr i32 %19, 8
  %21 = and i32 %20, 255
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @update_bits_range(i32* %17, i32 %18, i32 %21, i32 %22)
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* @M68K_REG_FP0, align 4
  %26 = load i32, i32* %7, align 4
  %27 = ashr i32 %26, 16
  %28 = and i32 %27, 255
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @update_bits_range(i32* %24, i32 %25, i32 %28, i32 %29)
  ret void
}

declare dso_local i32 @update_bits_range(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
